@@ -1,6 +1,7 @@
 5.4.1
 -----
 1. Translation update.
+2. Fix MAI settings button (top right cog icon).
 
 5.4.0
 -----
